Fix popup text on map in dark mode (#1891)
* Fixed #1717:MessageSection.react.js refactored and connected to store

* Fixes #1768: Integrate messageComposer with redux store

* Fixes #1811: Logout action added, force refresh has been removed

* Fix popup text on map in dark mode

Fix popup text on map in dark mode

changed http to https in css link of leaflet

changed back to http

changed url of leaflet css

* Fixed the term

* Desktops and laptops External link working properly (#1887)

* Desktops and laptops External link working

* Desktops and laptops External link working

* Add a option to share SUSI (#1807)

* add a share dialog

add a share dialog

add icon

add a close icon button

fix codacy

remove yarn.lock

add a share dialog

add a share dialog

add icon

add a close icon button

fix codacy

remove yarn.lock

make it responsive

make it responsive

fix design

fix issues

fix confs

add styles

Delete \

use single style objects

* add style object

change styleNames

change style names

fix codacy

fix codacy

fix codacy

add double quotes

implement single click for share

background change on hover

* Fix Microphone toggle in Settings, Speech Language, styling for settings (#1884)

* Fixes #1902: Refactor and integrate Redux in Feedback.react.js (#1905)

--- a/src/components/ChatApp/ChatApp.css
+++ b/src/components/ChatApp/ChatApp.css
@@ -620,6 +620,10 @@ textarea {
   margin: 0 auto;
 }
 
+.leaflet-popup-content {
+  color: black;
+}
+
 .chatapp {
   margin: 0 auto;
   width: 100vw;
